# Prjs

./: .env.example  .gitignore  CLAUDE.MD  check_voice_status.py  debug_db.py  diagnose_wakeword.py  find_backend.py  pyproject.toml  test_mic.py  test_reliability.py
backend/: config.py  database.py  logging_config.py  main.py
backend/api/: __init__.py  chat.py  documents.py  projects.py  traceability.py  vision.py  voice.py
backend/domain/: models.py  project.py  traceability.py
backend/services/: converter.py  enhanced_rag.py  ingestion.py  llm.py  memory.py  project.py  rag.py  router.py  traceability.py  vector_db.py  vision.py
backend/services/voice/: __init__.py  audio.py  event_broadcaster.py  orchestrator.py  stt.py  tts.py  wakeword.py
chroma_db/: chroma.sqlite3
docs/: VOICE_PIPELINE_SETUP.md  sample_traceability_matrix.csv  traceability_enhancements_spec.md  traceability_module.md
docs/user_guide/: voice-mode.md
frontend/: lint_output.txt  package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/chat/: ChatInput.tsx  ChatInterface.tsx  MessageItem.tsx  MessageList.tsx
frontend/src/components/documents/: DocIcons.tsx  DocumentList.tsx  HeaderFooterDialog.tsx
frontend/src/components/voice/: VoiceControl.tsx
frontend/src/hooks/: useVoiceEvents.ts
frontend/src/lib/: api.ts  store.ts
scripts/: analyze_wav.py  create_wakeword.py  debug_audio_capture.py  debug_rag.py  list_audio_devices.py  record_test.py  setup_wakeword.py  test_stt.py  verify_project_isolation.py  verify_setup.py  verify_voice.py
(+2 files in other folders)
