[project]
name = "wendy"
version = "0.1.0"
description = "Wendy - Local AI Assistant"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "pymupdf>=1.24.1",
    "python-docx>=1.1.0",
    "openpyxl>=3.1.2",
    "chromadb>=0.4.24",
    "ollama>=0.4.0",
    "python-pptx>=1.0.0",
    "beautifulsoup4>=4.12.0",
    "pandas>=2.2.0",
    "faster-whisper>=1.0.0",
    "sherpa-onnx>=1.10.0",
    "sounddevice>=0.5.0",
    "numpy>=1.26.0",
    "pystray>=0.19.0",
    "Pillow>=10.4.0",
    "watchdog>=5.0.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.12",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.2.0",
    "structlog>=24.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[project.scripts]
wendy-api = "backend.main:start"
